--- a/DimageBoot/pom.xml
+++ b/DimageBoot/pom.xml
@@ -29,6 +29,20 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.boot</groupId> -->
+<!-- 			<artifactId>spring-boot-starter-security</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>io.jsonwebtoken</groupId> -->
+<!-- 			<artifactId>jjwt</artifactId> -->
+<!-- 			<version>0.9.1</version> -->
+<!-- 		</dependency> -->
+		<!-- Spring boot thymeleaf -->	
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 		<!-- JPA Data (We are going to use Repositories, Entities, Hibernate, etc...) -->
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
