--- a/DimageBoot/src/main/resources/application.properties
+++ b/DimageBoot/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # =============Database config==================
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/dimage_db
 spring.datasource.username=root
 spring.datasource.password=123456
