--- a/DimageBoot/pom.xml
+++ b/DimageBoot/pom.xml
@@ -38,11 +38,15 @@
 <!-- 			<artifactId>jjwt</artifactId> -->
 <!-- 			<version>0.9.1</version> -->
 <!-- 		</dependency> -->
-		<!-- Spring boot thymeleaf -->	
+<!-- 		Spring boot thymeleaf	 -->
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-devtools</artifactId>
+	        </dependency>
 		<!-- JPA Data (We are going to use Repositories, Entities, Hibernate, etc...) -->
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
