--- a/DimageBoot/pom.xml
+++ b/DimageBoot/pom.xml
@@ -33,12 +33,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>io.jsonwebtoken</groupId> -->
-<!-- 			<artifactId>jjwt</artifactId> -->
-<!-- 			<version>0.9.1</version> -->
-<!-- 		</dependency> -->
-<!-- 		Spring boot thymeleaf	 -->
+		<!-- 		jwt	 -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<!-- 		Spring boot thymeleaf	 -->
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -52,6 +53,7 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
 		<!-- Use MySQL Connector-J -->
 		<dependency>
 		    <groupId>mysql</groupId>
